--- a/FormsControlLibrary/Designer/Designer/Designer.csproj
+++ b/FormsControlLibrary/Designer/Designer/Designer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{33FC621B-D23C-4985-8669-6FD73F966CDB}</ProjectGuid>
+    <ProjectGuid>{3681990E-A21F-4558-B047-28140EC743B5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CoreEditor</RootNamespace>
-    <AssemblyName>CoreEditor</AssemblyName>
+    <RootNamespace>Designer</RootNamespace>
+    <AssemblyName>Designer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,18 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CoreEditor.cs">
+    <Compile Include="Designer.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CoreEditor.Designer.cs">
-      <DependentUpon>CoreEditor.cs</DependentUpon>
+    <Compile Include="Designer.Designer.cs">
+      <DependentUpon>Designer.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="CoreEditor.resx">
-      <DependentUpon>CoreEditor.cs</DependentUpon>
+    <EmbeddedResource Include="Designer.resx">
+      <DependentUpon>Designer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
